# goethe

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  GoetheConfig.cmake  LICENSE  README.md  ROADMAP.md
.github/: PULL_REQUEST_TEMPLATE.md  badges.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: cached-build.yml  ci.yml  compression-test.yml  cpp-tests.yml  full-test-suite.yml  quick-test.yml  sdl3-test.yml  statistics-test.yml
addons/goethe_dialog/: CMakeLists.txt  README.md  build.sh  goethe_test  plugin.gd  test_main.cpp  test_package.gdkg
addons/goethe_dialog/examples/: README.md
addons/goethe_dialog/examples/basic_dialog/: basic_dialog_example.gd  basic_dialog_example.tscn
addons/goethe_dialog/examples/visual_novel/: visual_novel_example.gd  visual_novel_example.tscn
addons/goethe_dialog/scenes/: dialog_editor.gd  dialog_editor.tscn  dialog_manager.tscn  dialog_ui.tscn
addons/goethe_dialog/scripts/: condition_system.gd  goethe_character.gd  goethe_dialog_manager.gd  goethe_dialog_node.gd
addons/goethe_dialog/src/: goethe_dialog.h  register_types.cpp
addons/goethe_dialog/test_dialogs/: chapter1.yaml  chapter2.yaml
cmake/: GoetheConfig.cmake.in
docs/: ARCHITECTURE.md  CI_CD.md  QUICKSTART.md  STATISTICS.md  SUMMARY.md
engine/core/: api.cpp  engine.cpp  engine.hpp
include/goethe/: backend.hpp  dialog.hpp  factory.hpp  goethe_dialog.h  manager.hpp  null.hpp  register_backends.hpp  statistics.hpp  zstd.hpp
samples/hello_vn/: CMakeLists.txt  hello_vn  host.cpp
samples/hello_vn/assets/: project.goethe.json
samples/hello_vn/assets/scenes/: home.gsc  intro.gsc  rooftop.gsc
samples/visual_vn/: CMakeLists.txt  main.cpp
samples/visual_vn/assets/: project.goethe.json
samples/visual_vn/assets/scenes/: intro.gsc
schemas/: gsf-a.schema.json  gsf-a.schema.yaml
scripts/: build.sh  create_sample_package.sh  install-hooks.sh  lint.sh  pre-commit-verify.sh  pre-commit.sh  pre-push-verify.sh  run_tests.sh  setup_dev.sh  test-local.sh
sdk/: goethe.h
src/engine/core/: dialog.cpp  statistics.cpp
src/engine/core/compression/: backend.cpp  factory.cpp  manager.cpp  register_backends.cpp
src/engine/core/compression/implementations/: null.cpp  zstd.cpp
src/tests/: minimal_compression_test.cpp  minimal_statistics_test.cpp  simple_statistics_test.cpp  simple_test.cpp  standalone_statistics_test.cpp  statistics_test.cpp  test_basic.cpp  test_compression.cpp  test_dialog.cpp
src/tools/: gdkg_tool.cpp  statistics_tool.cpp
tests/: CMakeLists.txt  test_engine_basic.cpp
tools/goethec/: CMakeLists.txt  main.cpp  story_cmds.cpp
